# XAI-People-analytics

./: .gitignore  README.md  THESIS.md  main.py  pyproject.toml
notebooks/: alibi-explanation.ipynb  alibi_counterfactuals.ipynb  eda.ipynb  lime_explanations.ipynb  shap_explanation.ipynb
src/: dashboard.py  preprocess.py  settings.py  train.py
tesi/: biblio.bib  frontespizio.tex  main.aux  main.bbl  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  uninafrontespizio.sty
tesi/_reference/: 1_introduzione.tex  2_stato_dell'arte.tex  3_teoria.tex  4_laboratorio.tex  5_conclusioni.tex  Appendice.tex  dedica.tex  grazie.tex  sommario.tex
tesi/chapters/: 1_introduzione.tex  2_quadro_teorico.tex  3_caso_studio.tex  4_discussione.tex  5_conclusioni.tex  appendice.tex  dedica.tex  grazie.tex  sommario.tex
tesi/notes/chapters/1/: definizione-evoluzione.md
tesi/notes/chapters/2/2.1/: fattori-di-attrition.md  limiti-approccio-tradizionale-vantaggi-dati-strutturati.md
tesi/notes/chapters/2/2.3/: Definizione interpretabilità.docx  caratteristiche di una buona spiegazione per l_uomo.docx  differenza interpretabilità ed esplicabilità.docx  effetto rashomon.docx  quando l_interpretabilità è importante e quando non lo è.docx
tesi/notes/chapters/2/2.3/2.3.1/: shap-tree-explainer.md  shap.md
tesi/notes/chapters/2/2.3/2.3.2/: lime.md  metrica-r2.md  perturbazione-dati-tabulari.md
tesi/notes/chapters/2/2.3/2.3.3/: alibi-1.md  (+3 more)
tesi/notes/chapters/4/4.3/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
(+2 files in other folders)
