[project]
name = "xai-people-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alibi>=0.9.6",
    "imbalanced-learn>=0.14.1",
    "interpret>=0.7.6",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.54.0",
    "xgboost>=3.2.0",
]
